--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.custom-scrollbar {
+/* .custom-scrollbar {
     scrollbar-width: thin;
     scrollbar-color: #888 #f1f1f1;
 }
@@ -21,4 +21,56 @@
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
     background-color: #F5F5F5;
+} */
+
+/* App.css */
+/* .custom-scrollbar {
+    scrollbar-width: thin;
+    scrollbar-color: #888 #f1f1f1;
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+    height: 8px;
+    background-color: #f1f1f1;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 4px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+} */
+/* App.css */
+/* App.css */
+.custom-scrollbar {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+    display: none;
+    /* Chrome, Safari, Opera */
+}
+
+.custom-scrollbar.drag-scroll {
+    cursor: grab;
+}
+
+.custom-scrollbar.drag-scroll:active {
+    cursor: grabbing;
+}
+
+.no-select {
+    user-select: none;
+    /* Prevent text selection */
+}
+
+.active-item {
+    text-decoration: underline red;
+    text-decoration-thickness: 50% !important;
+    text-underline-offset: 13px;
 }
