--- a/src/App.css
+++ b/src/App.css
@@ -1,76 +1,62 @@
-/* .custom-scrollbar {
-    scrollbar-width: thin;
-    scrollbar-color: #888 #f1f1f1;
-}
-
-.custom-scrollbar::-webkit-scrollbar {
-    height: 6px;
-    background-color: #f1f1f1;
-}
-
-.custom-scrollbar::-webkit-scrollbar-thumb {
-    background-color: #888;
-    border-radius: 8px;
-}
-
-.custom-scrollbar::-webkit-scrollbar-thumb:hover {
-    background-color: #555;
-}
-
-.custom-scrollbar::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
-    background-color: #F5F5F5;
-} */
-
-/* App.css */
-/* .custom-scrollbar {
-    scrollbar-width: thin;
-    scrollbar-color: #888 #f1f1f1;
-}
-
-.custom-scrollbar::-webkit-scrollbar {
-    height: 8px;
-    background-color: #f1f1f1;
-}
-
-.custom-scrollbar::-webkit-scrollbar-thumb {
-    background-color: #888;
-    border-radius: 4px;
-}
-
-.custom-scrollbar::-webkit-scrollbar-thumb:hover {
-    background-color: #555;
-} */
-/* App.css */
-/* App.css */
 .custom-scrollbar {
-    -ms-overflow-style: none;
-    /* IE and Edge */
-    scrollbar-width: none;
-    /* Firefox */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 .custom-scrollbar::-webkit-scrollbar {
-    display: none;
-    /* Chrome, Safari, Opera */
+  display: none;
 }
 
 .custom-scrollbar.drag-scroll {
-    cursor: grab;
+  cursor: grab;
 }
 
 .custom-scrollbar.drag-scroll:active {
-    cursor: grabbing;
+  cursor: grabbing;
 }
 
 .no-select {
-    user-select: none;
-    /* Prevent text selection */
+  user-select: none;
 }
 
-.active-item {
-    text-decoration: underline red;
-    text-decoration-thickness: 50% !important;
-    text-underline-offset: 13px;
+@keyframes text-color-change {
+  from {
+    color: black;
+  }
+  to {
+    color: orange;
+  }
+}
+
+.animate-text-color-change {
+  animation: text-color-change 0.3s ease-out forwards;
+  position: relative;
+}
+
+.animate-text-color-change::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: orange;
+  animation: border-expand 0.3s ease-out forwards;
+}
+
+@keyframes border-expand {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+.section-parents > :nth-child(even) {
+  @apply bg-orange-100;
+}
+
+.full-height {
+  height: 100vh; /* Force sections to take full viewport height */
 }
