--- a/src/App.css
+++ b/src/App.css
@@ -1,62 +1,64 @@
 .custom-scrollbar {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 .custom-scrollbar::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
 
 .custom-scrollbar.drag-scroll {
-  cursor: grab;
+    cursor: grab;
 }
 
 .custom-scrollbar.drag-scroll:active {
-  cursor: grabbing;
+    cursor: grabbing;
 }
 
 .no-select {
-  user-select: none;
+    user-select: none;
 }
 
 @keyframes text-color-change {
-  from {
-    color: black;
-  }
-  to {
-    color: orange;
-  }
+    from {
+        color: black;
+    }
+
+    to {
+        color: orange;
+    }
 }
 
 .animate-text-color-change {
-  animation: text-color-change 0.3s ease-out forwards;
-  position: relative;
+    animation: text-color-change 0.3s ease-out forwards;
+    position: relative;
 }
 
 .animate-text-color-change::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  background-color: orange;
-  animation: border-expand 0.3s ease-out forwards;
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: orange;
+    animation: border-expand 0.3s ease-out forwards;
 }
 
 @keyframes border-expand {
-  from {
-    width: 0;
-  }
-  to {
-    width: 100%;
-  }
+    from {
+        width: 0;
+    }
+
+    to {
+        width: 100%;
+    }
 }
 
-.section-parents > :nth-child(even) {
-  @apply bg-orange-100;
+.section-parents> :nth-child(even) {
+    @apply bg-orange-100;
 }
 
 .full-height {
-  height: 100vh; /* Force sections to take full viewport height */
+    height: 100vh;
 }
